fix(YSP-627): set the gin spacing to 0 for smartdate-inline
This seems like a better solution than using !important.  This ensures
that there is no bottom margin on the date fields for a smart date
that's inline.

--- a/web/themes/custom/ys_admin_theme/scss/admin-ui.scss
+++ b/web/themes/custom/ys_admin_theme/scss/admin-ui.scss
@@ -13,9 +13,6 @@
   float: none;
 }
 
-.field--widget-smartdate-inline
-  .field-multiple-table
-  tr
-  .form-item:not(:last-of-type) {
-  margin-bottom: auto !important;
+.field--widget-smartdate-inline {
+  --gin-spacing-m: 0;
 }
